styles/index.css
@import url("./base.css");
@import url("./theme.css");
body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  font-family: var(--font-family);
  background-color: var(--color-white);
  color: var(--color-slate-900);
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.header {
  display: flex;
  padding: var(--spacing-500) var(--spacing-1000) 0;
  flex-direction: column;
  justify-content: center;
  align-items: flex-end;
}

.hero {
  display: flex;
  padding: var(--spacing-800) var(--spacing-400) var(--spacing-400);
  flex-direction: column;
  align-items: center;
  gap: 3rem;
  overflow: hidden;
}

.hero-img-desktop {
  display: none;
}

.hero-img-mobile {
  place-items: center;
  width: 140%;
}

.hero-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--spacing-300);
}

.hero-title {
  text-align: center;
  font: var(--text-preset-1);
}

.hero-description {
  text-align: center;
  font: var(--text-preset-4);
  color: var(--color-slate-600);
}

.hero-cta {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--spacing-200);
}

.main-content {
  display: flex;
  padding: var(--spacing-400) var(--spacing-400) var(--spacing-800);
  flex-direction: column;
  align-items: center;
  gap: var(--spacing-800);
}

.collage-images {
  display: grid;
  grid-template: repeat(2, 1fr) / repeat(2, 1fr);
  gap: var(--spacing-200);
}

.collage-images img {
  border-radius: 0.5rem;
}

.content-text {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--spacing-400);
}

.content-title {
  display: flex;
  flex-direction: column-reverse;
  align-items: center;
  gap: var(--spacing-200);
}

.content-title h2 {
  color: var(--color-slate-900);
  text-align: center;

  font: var(--text-preset-2);
}

.content-title p {
  color: var(--color-cyan-600);
  text-align: center;

  font: var(--text-preset-3);
  letter-spacing: 0.25rem;
  text-transform: uppercase;
}

.content-description {
  color: var(--color-slate-600);
  text-align: center;

  font: var(--text-preset-4);
}

.footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.footer .number {
  margin-bottom: -1.75rem;
  z-index: 1;
}

.footer-content {
  position: relative;
  display: flex;
  padding: var(--spacing-800) var(--spacing-400);
  flex-direction: column;
  align-items: center;
  gap: var(--spacing-800);

  background: var(--footer-image) 50% / cover no-repeat;
}
.footer-content::before {
  content: "";
  position: absolute;
  inset: 0;
  background-color: var(--color-cyan-600);
  opacity: 0.9;
  z-index: 0;
}

.footer-content * {
  position: relative;
  z-index: 1;
}

.footer-title {
  color: var(--color-white);
  text-align: center;

  font: var(--text-preset-2);
}

.footer-description {
  color: var(--color-white);
  text-align: center;

  font: var(--text-preset-4);
}

